--- a/process.env
+++ b/process.env
@@ -1,2 +1,2 @@
-SLACK_SIGNING_SECRET = "49031b78f48441f4ef0aa946ce5f273b"
-SLACK_BOT_TOKEN = "xoxb-1628642486273-2072742068146-1zS1g2DZElVK4rGdLm6e5b9d"
+SLACK_SIGNING_SECRET = ""
+SLACK_BOT_TOKEN = " "
